--- a/deno.json
+++ b/deno.json
@@ -2,9 +2,9 @@
   "lock": false,
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
-    "start": "deno run -A --watch=static/,routes/ dev.ts",
-    "build": "deno run -A dev.ts build",
-    "preview": "deno run -A main.ts",
+    "start": "deno run -A --watch=static/,routes/ example/dev.ts",
+    "build": "deno run -A example/dev.ts build",
+    "preview": "deno run -A example/main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
   "lint": {
